feat: add edit document API client
